# PyCourse

./: README.md
hw_1/: nl.py  tail.py  wc.py
hw_1/artifacts/: report.txt  second.txt  testREADME.md
hw_2/: Dockerfile  README.md  docker-compose.yml  example.tex  pyproject.toml  script.sh  test_tex_maker.py
hw_3/: pyproject.toml
hw_3/t3_1_3/: hash.py  matrix1.py
hw_3/t3_1_3/1/: matrix*.txt  matrix+.txt  matrix@.txt
hw_3/t3_1_3/3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw_3/t3_2/: matrix*.txt  matrix+.txt  matrix2.py  matrix@.txt
hw_4/: pyproject.toml
hw_4/1/: results.txt  t4_1.py
hw_4/2/: results2.txt  t4_2.py
hw_4/3/: results3.txt  t4_3.py
hw_5/: README.md  pyproject.toml  t5_1.py  test.py
