[project]
name = "hw-3"
version = "0.1.0"
description = "matrices hw"
authors = [
    {name = "Igor",email = "greafdorothy@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
