[project]
name = "hw-4"
version = "0.1.0"
description = "hw4 about threads and processes"
authors = [
    {name = "Igor",email = "greafdorothy@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
